tests/predicates_subtyping/predicates_subtyping.exp
Error ----------------------------------------------------------------------------------------------------- file.js:19:2

Cannot cast `a3` to `typeof is_number` because predicate encoded in return [1] is incompatible with predicate encoded in
return [2]. [incompatible-cast]

   file.js:19:2
   19| (a3: typeof is_number); // error incompatible predicates
        ^^

References:
   pred-decls.js:1:54
    1| declare export function is_string(x: mixed): boolean %checks(typeof x === "string");
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   pred-decls.js:2:54
    2| declare export function is_number(x: mixed): boolean %checks(typeof x === "number");
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:32:2

Cannot cast `b2` to `typeof is_number_def` because predicate encoded in return [1] is incompatible with predicate
encoded in return [2]. [incompatible-cast]

   file.js:32:2
   32| (b2: typeof is_number_def); // error incompatible predicates
        ^^

References:
   file.js:22:3
   22|   return typeof x === 'string';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:25:3
   25|   return typeof x === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:45:2

Cannot cast `b4` to `typeof is_number_def_2a` because arity 1 of function [1] is incompatible with arity 2 of
function [2]. [function-predicate]

   file.js:45:2
   45| (b4: typeof is_number_def_2a); // error: arrity mismatch
        ^^

References:
   file.js:44:17
   44| declare var b4: typeof is_number_def;
                       ^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:45:6
   45| (b4: typeof is_number_def_2a); // error: arrity mismatch
            ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:59:2

Cannot cast `b6` to `typeof is_number_def_2a` because predicate encoded in return [1] is incompatible with predicate
encoded in return [2]. [incompatible-cast]

   file.js:59:2
   59| (b6: typeof is_number_def_2a); // error: is_number_def_2b does not refine at least `y`
        ^^

References:
   file.js:52:3
   52|   return typeof x === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:38:3
   38|   return typeof x === 'number' && typeof y === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:68:2

Cannot cast `b8` to array type because predicate encoded in return [1] is incompatible with predicate encoded in
return [2] in array element. [incompatible-cast]

   file.js:68:2
   68| (b8: Array<typeof is_number_def>); // error incompatible predicates
        ^^

References:
   file.js:22:3
   22|   return typeof x === 'string';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:25:3
   25|   return typeof x === 'number';
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:71:2

Cannot cast `b9` to array type because function type [1], a non-predicate function, is incompatible with function [2],
which is a predicate function in array element. Arrays are invariantly typed. See
https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.
[function-predicate]

   file.js:71:2
   71| (b9: Array<(x: mixed) => boolean>); // error incompatible predicates
        ^^

References:
   file.js:71:12
   71| (b9: Array<(x: mixed) => boolean>); // error incompatible predicates
                  ^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:70:23
   70| declare var b9: Array<typeof is_string_def>;
                             ^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- file.js:74:2

Cannot cast `b10` to array type because function type [1], a non-predicate function, is incompatible with function [2],
which is a predicate function in array element. [function-predicate]

   file.js:74:2
   74| (b10: Array<typeof is_string_def>); // error incompatible predicates
        ^^^

References:
   file.js:73:24
   73| declare var b10: Array<(x: mixed) => boolean>;
                              ^^^^^^^^^^^^^^^^^^^^^ [1]
   file.js:74:13
   74| (b10: Array<typeof is_string_def>); // error incompatible predicates
                   ^^^^^^^^^^^^^^^^^^^^ [2]



Found 7 errors
